backend + frontend: finished evaluation deletion
